docs-archive/apache-airflow/2.3.1/_sources/_api/airflow/secrets/metastore/index.rst.txt
:py:mod:`airflow.secrets.metastore`
===================================

.. py:module:: airflow.secrets.metastore

.. autoapi-nested-parse::

   Objects relating to sourcing connections from metastore database



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.secrets.metastore.MetastoreBackend




.. py:class:: MetastoreBackend

   Bases: :py:obj:`airflow.secrets.BaseSecretsBackend`

   Retrieves Connection object and Variable from airflow metastore database.

   .. py:method:: get_connection(self, conn_id, session=None)

      Return connection object with a given ``conn_id``.

      Tries ``get_conn_value`` first and if not implemented, tries ``get_conn_uri``

      :param conn_id: connection id


   .. py:method:: get_connections(self, conn_id, session=None)

      Return connection object with a given ``conn_id``.

      :param conn_id: connection id


   .. py:method:: get_variable(self, key, session=None)

      Get Airflow Variable from Metadata DB

      :param key: Variable Key
      :return: Variable Value



